boinc (7.6.32+dfsg-2) UNRELEASED; urgency=medium

  [ Steffen Moeller ]
  * Reintroduced dh_strip override for --dbgsym-migration

  [ Gianfranco Costamagna ]
  * debian/patches/8416d8a1a423535fbc5d4e7416d6eac8ac5c050b.patch:
    cherry-pick to fix crash on headless servers (LP: #1581029)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 12 May 2016 12:01:32 +0200

boinc (7.6.32+dfsg-1exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.
  [ Steffen Moeller ]
  * Fix boinc-app-examples build.
  * Add some lintian overrides against static apps.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 09 May 2016 10:11:32 +0200

boinc (7.6.32+dfsg-1) unstable; urgency=medium

  [ Gianfranco Costamagna ]
  * New upstream release.
  * Drop debug packages.
  * Simplify flags handling

  [ Steffen Moeller ]
  * Link time optimisation: corrected compiler flag management for 
    binaries and libraries which yielded a considerable drop in
    disk space (85%-95%)
  * Better consistency for compiler flags when building wrapper apps
    and sample scientific applications.
  * Example apps are now truly static.
  * Compliance with Debian Policy 3.9.8.
  * Added clean for past debian/boinc(-server)-dbg folders to help 
    the overall experience while upgrading our build folders.

 -- Steffen Moeller <moeller@debian.org>  Wed, 04 May 2016 13:02:44 +0200

boinc (7.6.31+dfsg-6exp1) experimental; urgency=medium

  * Upload to experimental again, with the boinc-server-* packages.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 07 Apr 2016 12:38:17 +0200

boinc (7.6.31+dfsg-6) unstable; urgency=medium

  * Upload to unstable
  [ Lorenzo Mastrogiacomi ]
  * Make cc_config.xml configurable from users
    members of boinc group (Closes: #818789).

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 07 Apr 2016 12:36:30 +0200

boinc (7.6.31+dfsg-5exp1) experimental; urgency=medium
